# SimpleBlogRust

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
src/: add_post.rs  blog.rs  db.rs  index.rs  main.rs
src/models/: post.rs
templates/: add_post.html  base.html  blog.html  index.html
