[package]
name = "simpleblogrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]  } 
warp = "0.3"
tera = "1"
log = "0.4.0"
env_logger = "0.8.4"
rusqlite = { version = "0.27.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
pulldown-cmark = "0.9.1"